<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_bg_gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/userEmail"
            android:layout_alignLeft="@+id/userPass"
            android:layout_alignStart="@+id/userPass"
            android:layout_marginBottom="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Enter Name"
            tools:layout_editor_absoluteX="72dp" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/userPass"
            android:layout_alignLeft="@+id/userPass"
            android:layout_alignStart="@+id/userPass"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="Enter Email" />

        <EditText
            android:id="@+id/userPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:text="Password" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/userPass"
            android:layout_alignStart="@+id/userPass"
            android:layout_below="@+id/userPass"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/main_screen_button"
            android:text="Sign Up" />

    </RelativeLayout>

</LinearLayout>