...
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/settingsCog"
            android:layout_marginLeft="239dp"
            android:layout_marginStart="239dp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/settingsCog"
            android:layout_toRightOf="@+id/settingsCog" />

...
